; ModuleID = '/home/carl/AnghaBench/linux/drivers/mfd/extr_stmpe.c_stmpe_block_read.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mfd/extr_stmpe.c_stmpe_block_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stmpe = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @stmpe_block_read(%struct.stmpe* %0, i32 %1, i32 %2, i32* %3) #0 {
  %5 = alloca %struct.stmpe*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  store %struct.stmpe* %0, %struct.stmpe** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32* %3, i32** %8, align 8
  %10 = load %struct.stmpe*, %struct.stmpe** %5, align 8
  %11 = getelementptr inbounds %struct.stmpe, %struct.stmpe* %10, i32 0, i32 0
  %12 = call i32 @mutex_lock(i32* %11)
  %13 = load %struct.stmpe*, %struct.stmpe** %5, align 8
  %14 = load i32, i32* %6, align 4
  %15 = load i32, i32* %7, align 4
  %16 = load i32*, i32** %8, align 8
  %17 = call i32 @__stmpe_block_read(%struct.stmpe* %13, i32 %14, i32 %15, i32* %16)
  store i32 %17, i32* %9, align 4
  %18 = load %struct.stmpe*, %struct.stmpe** %5, align 8
  %19 = getelementptr inbounds %struct.stmpe, %struct.stmpe* %18, i32 0, i32 0
  %20 = call i32 @mutex_unlock(i32* %19)
  %21 = load i32, i32* %9, align 4
  ret i32 %21
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @__stmpe_block_read(%struct.stmpe*, i32, i32, i32*) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
